优化管理功能
