# docs/swagger.json
@@ -471,6 +471,57 @@
                 }
             }
         },
+        "/licenses/batch": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "licenses"
+                ],
+                "summary": "Batch create licenses",
+                "parameters": [
+                    {
+                        "description": "Batch Create Licenses",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.BatchCreateLicenseCommand"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/licenses/{id}": {
             "get": {
                 "consumes": [
@@ -660,6 +711,55 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/licenses/{id}/restore": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "licenses"
+                ],
+                "summary": "Restore a revoked license",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "License ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/api.CommonResponse"
                         }
@@ -1158,6 +1258,62 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "nodes"
+                ],
+                "summary": "Update node",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Node ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Node",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateNodeCommand"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    }
+                }
             }
         },
         "/nodes/{id}/ban": {
@@ -1543,6 +1699,62 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Update product",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Product",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateProductCommand"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.CommonResponse"
+                        }
+                    }
+                }
             }
         }
     },
@@ -1564,7 +1776,6 @@
             }
         },
         "dto.AddBindingCommand": {
-            "description": "Command to add a binding to a node",
             "type": "object",
             "required": [
                 "license_id",
@@ -1572,11 +1783,37 @@
             ],
             "properties": {
                 "license_id": {
-                    "description": "许可证ID",
                     "type": "integer"
                 },
                 "node_id": {
-                    "description": "节点ID",
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.BatchCreateLicenseCommand": {
+            "type": "object",
+            "required": [
+                "count",
+                "product_id",
+                "validity_hours"
+            ],
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "max_concurrent": {
+                    "type": "integer"
+                },
+                "max_nodes": {
+                    "type": "integer"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "remark": {
+                    "type": "string"
+                },
+                "validity_hours": {
                     "type": "integer"
                 }
             }
@@ -1662,18 +1899,15 @@
             }
         },
         "dto.CreateNodeCommand": {
-            "description": "Command to create a node",
             "type": "object",
             "required": [
                 "device_code"
             ],
             "properties": {
                 "device_code": {
-                    "description": "设备唯一识别码",
                     "type": "string"
                 },
                 "metadata": {
-                    "description": "设备元信息",
                     "type": "string"
                 }
             }
@@ -1870,7 +2104,6 @@
             }
         },
         "dto.UnbindCommand": {
-            "description": "Command to update binding status",
             "type": "object",
             "required": [
                 "license_id",
@@ -1878,11 +2111,9 @@
             ],
             "properties": {
                 "license_id": {
-                    "description": "许可证ID",
                     "type": "integer"
                 },
                 "node_id": {
-                    "description": "节点ID",
                     "type": "integer"
                 }
             }
@@ -1937,6 +2168,34 @@
                 "version_id": {
                     "description": "版本ID",
                     "type": "integer"
+                }
+            }
+        },
+        "dto.UpdateNodeCommand": {
+            "type": "object",
+            "properties": {
+                "device_code": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "metadata": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UpdateProductCommand": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
